dungeon.css
/* ... */
/* SLIDER */

.bp3-intent-primary {
    background-color: rgb(var(--color-primary)) !important;
}
.bp3-slider-handle {
    border-radius: 10px;
}


/* QUERY */

.rm-query {
  border: 0.5px solid #38332e;
  border-top-left-radius: 7px;
  border-top-right-radius: 7px;
  border-radius: 10px;
}

.rm-query .rm-query-title {
  background-color: #38332e;
  font-size: .8em;
}

/* CHECKBOX */

.check-container {
    padding-right: 2px;
    vertical-align: text-bottom;
    top: -5px;
}

.check-container .checkmark {
    width: 14px;
    height: 14px;
}
.check-container .checkmark::after {
    left: 4.5px;
    top: 1px;
}
.check-container input[checked] + .checkmark {
    background-color: rgb(var(--color-primary)) !important;
}

blockquote {
    font-size: 14px;
    border-color: var(--bullet-color);
    opacity: 0.5;
}

code { /* dave override */
    background: #ffffff1c;
    border: none;
    color: var(--text-color);
    padding: 2px 5px;
    line-height: 0.5;
}

.block-border-left {
    /* dave override */
    border-color: var(--bullet-color);
}


/* help button / popup */
#buffer {
    background: transparent !important;
    right: 7px !important;
    bottom: 10px !important;
}
#buffer .bp3-popover-target >.bp3-button {
    background: rgba(0, 0, 0, 0.1);
    height: 30px;
    width: 30px;
}
#buffer > div {
    z-index: 99999 !important;
    background: rgb(var(--color-secondary), 0.7) !important;
    backdrop-filter: blur(5px);
    border-radius: 10px;
    padding: 2px 8px 8px 8px;
    box-shadow: 0px 8px 14px rgba(0, 0, 0, 0.1)
}
#buffer > div .bp3-button::before {
    color: #FFFFFF !important;

}
#buffer .help-title {
    color: var(--color-secondary-contrast) !important;
}
#buffer .help-sub-title {
    color: var(--color-secondary-contrast) !important;
    opacity: 0.5;
}
#buffer span {
    color: rgba(255, 255, 255, 0.8) !important;
}
#buffer a {
    text-decoration: underline;
    color: var(--color-secondary-contrast) !important;
}
#buffer a:hover {
    opacity: 0.5;
}


/* ------------- Red Pomodoro ------------- */
/* credit: https://github.com/theianjones/roam-research-themes/blob/master/pomodoros.css */
.rm-pomodoro {
  background: transparent !important;
  color: #ff4747 !important;
  padding: 4px 14px;
  line-height: 2em;
  font-weight: 600;
  border-radius: 2em;
  border: 1px solid #ff474770;
}

.rm-pomodoro::first-letter {
  margin-right: 8px;
}


/* BUTTON */
.block-bullet-view .bp3-button:not([class*="bp3-icon"]) {
    background: transparent !important;
    color: rgb(var(--color-primary)) !important;
    padding: 4px 14px;
    line-height: 2em;
    font-weight: 600;
    border-radius: 2em !important;
    border: 1px solid rgba(var(--color-primary), 0.5) !important;
    box-shadow: none !important;
}
.block-bullet-view .bp3-button:hover {
    background: rgba(var(--color-primary), 0.2) !important;

}

/* KANBAN */
.kanban-board {
    background-color: transparent;
    padding: 0;
    max-width: 500px;
}
.kanban-title {
    background: rgb(var(--color-primary));
    color: var(--color-primary-contrast) !important;
    font-weight: bold;
    padding: 0px !important;
    max-height: 30px;
    border: none;
    display: flex;
    align-items: center;
}
.kanban-title > span {
    display: block;
    margin: auto;
}
.kanban-column {
    border-radius: 10px;
    box-shadow: 0px 8px 14px rgba(0, 0, 0, 0.05);
    padding: 0;
    overflow: hidden;
}
.kanban-card {
    border-radius: 10px;
    box-shadow: 0px 8px 14px rgba(0, 0, 0, 0.05);
}
.kanban-card {
    background-color: var(--page-color);
    margin: 8px;
    box-shadow: 0px 1px 2px #9EB3C0;
    padding: 10px;
    border-radius: 4px;
    line-height: 1.3em;
}
.kanban-column {
    background-color: ;
    margin: 0px 4px 0px 4px;
    min-width: 200px;
    border-radius: 6px;
}

/* ASTROLABE */

/* Breathing Loader */
/* https://codepen.io/Mathi_C/pen/mMWaaW */
.loading-astrolabe {
    height: 100px;
    width: 100px;
    border-radius: 200px;
    margin: auto;

}

.loading-astrolabe {
    animation-name: orb_1;
    animation-duration: 3s;
    animation-delay: 0s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    animation-direction: alternate;
}

@keyframes orb_1 {
    from {
        transform: scale(0.2);
        background: rgb(var(--color-secondary));
    }
    to {
        transform: scale(2);
        background: rgb(var(--color-primary));
    }
}

/* Hide original loader */
.loading-astrolabe img {
    display: none;
}

.bp3-spinner {
    visibility: hidden;
}
.bp3-spinner > * {
    visibility: visible;
}

.bp3-spinner-head {
    stroke: rgb(var(--color-primary)) !important;
}








.roam-center > div > div > div svg :not(.katex) {
    background-color: var(--bg-color) !important;
}

/* fix specific popover sizes and positions... */

.rm-topbar .bp3-popover-wrapper:nth-child(6) .bp3-popover,
.rm-topbar .bp3-popover-wrapper:nth-child(7) .bp3-popover{
    width: 600px;
    max-width: calc(100vw - 20px);
}
#roam-right-sidebar-content > div .flex-h-box > .bp3-popover-wrapper .bp3-transition-container {
    transform: translate3d(-15px, 41px, 0px) !important;
}
#roam-right-sidebar-content > div .flex-h-box > .bp3-popover-wrapper .bp3-transition-container .bp3-popover-arrow {
    left: 10px !important;
}
/* ... */

